# ml_intro_hm_9

./: .gitignore  LinerRegression.py  README.md  get_dataset.py  main.py  nested_cross_validation_with_random_forest.py  pyproject.toml
mlruns/0/1fec46a98ec54084ad9c33dde09fb870/: meta.yaml
mlruns/0/1fec46a98ec54084ad9c33dde09fb870/metrics/: accuracy  f1  roc_auc_score
mlruns/0/1fec46a98ec54084ad9c33dde09fb870/tags/: mlflow.log-model.history
mlruns/0/26613c097c59461291a0be2577fb45a5/: meta.yaml
mlruns/0/26613c097c59461291a0be2577fb45a5/metrics/: accuracy  f1  roc_auc_score
mlruns/0/26613c097c59461291a0be2577fb45a5/tags/: mlflow.log-model.history  mlflow.source.git.commit
mlruns/0/345f7d2a49f149e9ada11d8df03d701f/: meta.yaml
mlruns/0/345f7d2a49f149e9ada11d8df03d701f/metrics/: accuracy  f1  roc_auc_score
mlruns/0/345f7d2a49f149e9ada11d8df03d701f/tags/: mlflow.log-model.history
mlruns/0/5ccd083f858a4ac6b147fb40e81d47c8/: meta.yaml
mlruns/0/5ccd083f858a4ac6b147fb40e81d47c8/metrics/: accuracy  f1  roc_auc_score
mlruns/0/5ccd083f858a4ac6b147fb40e81d47c8/tags/: mlflow.log-model.history
mlruns/0/5eb2d985d1cc45b294906ac2608bac16/: meta.yaml
mlruns/0/5eb2d985d1cc45b294906ac2608bac16/metrics/: accuracy  f1  roc_auc_score
mlruns/0/5eb2d985d1cc45b294906ac2608bac16/tags/: mlflow.log-model.history
mlruns/0/897de2f5bc4a4111b033e197fa98e18a/: meta.yaml
mlruns/0/897de2f5bc4a4111b033e197fa98e18a/metrics/: accuracy  f1  roc_auc_score
mlruns/0/cae4e2b7a2344e138e00c58786b12261/: meta.yaml
mlruns/0/cae4e2b7a2344e138e00c58786b12261/metrics/: accuracy  f1  (+1 more)
(+13 files in other folders)
