[tool.poetry]
name = "ml_intro_hm_9"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
get_dataset = "ml_intro_hm_9:get_dataset"
create_pipeline = "ml_intro_hm_9:pipeline"
Liner_Model = "ml_intro_hm_9:LinerRegression"
nested_cv_rf = "ml_intro_hm_9:nested_cross_validation_with_random_forest"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pandas = "^1.4.2"
sklearn = "^0.0"
scikit-learn = "^1.0.2"
mlflow = "^1.25.1"
seaborn = "^0.11.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

